# Shader-Joy

./: .gitignore  CMakeLists.txt  ShaderJoy.sln  glad.c
Dependencies/GLAD/glad/: glad.h
ShaderJoy/: ShaderJoy.vcxproj
ShaderJoy/x64/Debug/: ShaderJoy.exe.recipe  ShaderJoy.ilk  vc143.idb
ShaderJoy/x64/Debug/ShaderJoy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ShaderJoy.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/glad/: glad.h
src/: glad.c  main.cpp
